added asset for exercise demo and intent to access it

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,13 @@
         <activity
             android:name=".WorkoutActivity"
             android:screenOrientation="portrait" />
-        <activity android:name=".ExerciseActivity" />
-        <activity android:name=".ProfileActivity"></activity>
+        <activity
+            android:name=".ExerciseActivity"
+            android:screenOrientation="portrait"
+            />
+        <activity
+            android:name=".ProfileActivity"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
