--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- kmvsmsom- Karina-->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.unscripted.www.fitnessappprototype">
 
