--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,5 @@
+//References: https://www.sitepoint.com/using-the-youtube-api-to-embed-video-in-an-android-app/
+
 apply plugin: 'com.android.application'
 
 android {
@@ -30,4 +32,5 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.google.android.gms:play-services-ads:10.2.1'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
 }
