added config Added references & comments, added customized titles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- kmvsmsom- Karina-->
+<!-- References @ http://stackoverflow.com/questions/38372234/android-studio-how-to-change-app-nametoolbar-for-each-activity **Karina-->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.unscripted.www.fitnessappprototype">
