--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,9 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.android.gms:play-services-ads:10.2.1'
     compile 'com.joooonho:selectableroundedimageview:1.0.1'
+    compile 'com.google.firebase:firebase-ads:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
